--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -28,14 +28,27 @@ block content
         section.masters
             div.master-card
                 div.master
-                    img(src=require("../images/index/master-one.jpg"))
-                    p Андрей
+                    //a(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D0%B4%D1%80%D0%B5%D0%B9' target="_blank")
+                    img.master__photo(src=require("../images/index/master-one.jpg"))
+                    div
+                        p Андрей
+                        p черно-белый реализм
+                    a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D0%B4%D1%80%D0%B5%D0%B9' target="_blank")
+                        button.butt ПОДРОБНЕЕ
                 div.master
-                    img(src=require("../images/index/master-two.png"))
-                    p Алиса
+                    img.master__photo(src=require("../images/index/master-two.png"))
+                    div
+                        p Алиса
+                        p цветная татуировка
+                    a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BB%D0%B8%D1%81%D0%B0' target="_blank")
+                        button.butt ПОДРОБНЕЕ
                 div.master
-                    img(src=require("../images/index/master-three.png"))
-                    p Антон
+                    img.master__photo(src=require("../images/index/master-three.png"))
+                    div
+                        p Антон
+                        p Администратор
+                    a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D1%82%D0%BE%D0%BD')
+                        button.butt ПОДРОБНЕЕ
         h2 ПОСЛЕДНИЕ РАБОТЫ
         section.last-worck
         h2 КОНТАКТЫ
@@ -57,6 +70,7 @@ block content
             div.right-block
                 div
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2332.884325286542!2d37.61914501109103!3d54.21753602379962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x413440964d1361c3%3A0x222dfb06b4a302e4!2z0JTQtdC80LjQtNC-0LLRgdC60LDRjyDRg9C7LiwgNzQsINCi0YPQu9CwLCDQotGD0LvRjNGB0LrQsNGPINC-0LHQuy4sIDMwMDA1Nw!5e0!3m2!1sru!2sru!4v1616440420021!5m2!1sru!2sru" width="400" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
 
 
 
