cards master button hover

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -30,25 +30,25 @@ block content
                 div.master
                     //a(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D0%B4%D1%80%D0%B5%D0%B9' target="_blank")
                     img.master__photo(src=require("../images/index/master-one.jpg"))
-                    div
+                    div.m
                         p Андрей
                         p черно-белый реализм
-                    a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D0%B4%D1%80%D0%B5%D0%B9' target="_blank")
-                        button.butt ПОДРОБНЕЕ
+                        a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D0%B4%D1%80%D0%B5%D0%B9' target="_blank")
+                            button.butt ПОДРОБНЕЕ
                 div.master
                     img.master__photo(src=require("../images/index/master-two.png"))
-                    div
+                    div.m
                         p Алиса
                         p цветная татуировка
-                    a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BB%D0%B8%D1%81%D0%B0' target="_blank")
-                        button.butt ПОДРОБНЕЕ
+                        a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BB%D0%B8%D1%81%D0%B0' target="_blank")
+                            button.butt ПОДРОБНЕЕ
                 div.master
                     img.master__photo(src=require("../images/index/master-three.png"))
-                    div
+                    div.m
                         p Антон
                         p Администратор
-                    a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D1%82%D0%BE%D0%BD')
-                        button.butt ПОДРОБНЕЕ
+                        a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D1%82%D0%BE%D0%BD')
+                            button.butt ПОДРОБНЕЕ
         h2 ПОСЛЕДНИЕ РАБОТЫ
         section.last-worck
         h2 КОНТАКТЫ
