--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -96,10 +96,11 @@ h2{
   color: #ffffff;
   border: none;
   border-radius: 15px;
-}
-
-.li{
   display: none;
+  cursor: pointer
+}
+.li{
+  text-decoration: none;
 }
 
 
