--- a/src/pages/include/layout.pug
+++ b/src/pages/include/layout.pug
@@ -11,23 +11,20 @@ html(lang="en")
                 img.header__logo(src=require("../images/layout/logo.svg"))
             nav.menu
                 a(href='/').menu__link ГЛАВНАЯ
-                a(href='#').menu__link МАСТЕРА
                 a(href='#').menu__link ЗАПИСЬ
                 a(href='#').menu__link КОНТАКТЫ
                 a(href='#').menu__link FAQ
 
         block content
-        //div.cub
 
         div.footer-decoration
             footer.footer.inner
-                div.footer-menu
+                //div.footer-menu
                     a(href='#').footer-menu__link ГЛАВНАЯ
-                    a(href='#').footer-menu__link УСЛУГИ
                     a(href='#').footer-menu__link ЗАПИСЬ
                     a(href='#').footer-menu__link КОНТАКТЫ
                     a(href='#').footer-menu__link FAQ
-                div.footer-contact
+                //div.footer-contact
                     div.footer-contact__phone
                         img.footer-img(src=require("../images/layout/footer-phone.svg"))
                         p +7 (950) 904-34-25
