--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -9,18 +9,18 @@ block content
         h2 УСЛУГИ
         section.services
             //a(href='#')
-            div.consultation
-                p БЕСПЛАТНАЯ КОНСУЛЬТАЦИЯ
+            div.consultation.services__block
+                p.services__title БЕСПЛАТНАЯ КОНСУЛЬТАЦИЯ
                 div.block-decor
                     div.fon
                     img(src=require("../images/index/consultation.svg"))
-            div.sketch
-                p ИНДИВИДУАЛЬНЫЙ ЭСКИЗ
+            div.sketch.services__block
+                p.services__title ИНДИВИДУАЛЬНЫЙ ЭСКИЗ
                 div.block-decor
                     div.fon
                     img(src=require("../images/index/sketch.svg"))
-            div.tattoo
-                p ХУДОЖЕСТВЕННАЯ ТАТУИРОВКА
+            div.tattoo.services__block
+                p.services__title ХУДОЖЕСТВЕННАЯ ТАТУИРОВКА
                 div.block-decor
                     div.fon
                     img(src=require("../images/index/tattoo.svg"))
@@ -32,21 +32,21 @@ block content
                     img.master__photo(src=require("../images/index/master-one.jpg"))
                     div.m
                         p Андрей
-                        p черно-белый реализм
+                        p.light черно-белый реализм
                         a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D0%B4%D1%80%D0%B5%D0%B9' target="_blank")
                             button.butt ПОДРОБНЕЕ
                 div.master
                     img.master__photo(src=require("../images/index/master-two.png"))
                     div.m
                         p Алиса
-                        p цветная татуировка
+                        p.light цветная татуировка
                         a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BB%D0%B8%D1%81%D0%B0' target="_blank")
                             button.butt ПОДРОБНЕЕ
                 div.master
                     img.master__photo(src=require("../images/index/master-three.png"))
                     div.m
                         p Антон
-                        p Администратор
+                        p.light Администратор
                         a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D1%82%D0%BE%D0%BD')
                             button.butt ПОДРОБНЕЕ
         h2 ПОСЛЕДНИЕ РАБОТЫ
@@ -54,9 +54,14 @@ block content
         h2 КОНТАКТЫ
         section.contact
             div.left-block
-                div
-                    p +7 (950) 904-34-25
-                div
+                div.footer-contact.footer-contact--margin
+                    div.footer-contact__phone
+                        img.footer-img(src=require("../images/layout/footer-phone.svg"))
+                        p.margin +7 (950) 904-34-25
+                    div.footer-contact__map
+                        img.footer-img(src=require("../images/layout/footer-map.svg"))
+                        p.margin Тула, ул.Демидовская #[br] (Заречье), дом 74
+                div.info
                     p Время работы :
                     p
                     span.bold Пн-Пт:
@@ -66,9 +71,8 @@ block content
                     |выходной
                 div
                     p.bold Мы в социальных сетях :
-                p Тула, ул.Демидовская #[br] (Заречье), дом 74
             div.right-block
-                div
+                div.map
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2332.884325286542!2d37.61914501109103!3d54.21753602379962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x413440964d1361c3%3A0x222dfb06b4a302e4!2z0JTQtdC80LjQtNC-0LLRgdC60LDRjyDRg9C7LiwgNzQsINCi0YPQu9CwLCDQotGD0LvRjNGB0LrQsNGPINC-0LHQuy4sIDMwMDA1Nw!5e0!3m2!1sru!2sru!4v1616440420021!5m2!1sru!2sru" width="400" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
 
