--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;1,400&display=swap');
 
 @font-face {
   font-family: 'FinistC';
@@ -6,13 +7,16 @@
 
 h2{
   text-align: center;
-    font-family: FinistC;
-    letter-spacing: 5px;
-    font-size: 35px;
-    color: $colorMenu;
-    margin: 100px 0;
+  font-family: FinistC;
+  letter-spacing: 5px;
+  font-size: 35px;
+  color: $colorMenu;
+  margin: 100px 0;
 }
 
+p{
+  font-family: 'Lora', serif;
+}
 
 //УСЛУГИ
 
@@ -25,6 +29,22 @@ h2{
     //background-color: #A7BFE8;
 }
 
+.services__block{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  //background-color: #A7BFE8;
+  width: 300px;
+  height: inherit;
+}
+
+.services__title{
+  text-align: center;
+  font-weight: 500;
+  color: $colorMenu;
+}
+
 .block-decor{
     width: 200px;
     height: 200px;
@@ -34,7 +54,7 @@ h2{
     justify-content: center;
     align-items: center;
     position: relative;
-    //text-align: center;
+
     img{
       z-index: 2;
     }
@@ -103,31 +123,66 @@ h2{
   text-decoration: none;
 }
 
+.light{
+  font-weight: 500;
+  font-style: italic;
+}
 
 
 
 
-
-
-
-
-
-
-
+//последние работы
 .last-worck{
   width: auto;
   height: 100px;
   background-color: cadetblue;
 }
 
+
+//контакты
 .contact{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
 
-
 .bold{
   font-weight: bold;
 }
+.left-block{
+  position: absolute;
+  width: 400px;
+  height: 270px;
+  background-color: rgba(151, 148, 148, 0.43);
+  z-index: 2;
+  margin-top: 140px;
+  margin-right: 50%;
+}
+
+.right-block{
+  position: relative;
+}
+.map iframe{
+  width: 1100px;
+  height: 500px;
+  z-index: 1;
+}
+
+.footer-contact.footer-contact--margin{
+  margin-top: 0;
+  margin-bottom: 0;
+
+  p{
+    color: #3f5791;
+  }
+  img{
+    color: #3f5791;
+  }
+}
+.info{
+  p, span {
+    color: #3f5791;
+  }
+}
+
 
