--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -30,40 +30,40 @@ block content
                 div.master
                     //a(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D0%B4%D1%80%D0%B5%D0%B9' target="_blank")
                     img.master__photo(src=require("../images/index/master-one.jpg"))
-                    div.m
-                        p Андрей
-                        p.light черно-белый реализм
+                    div.master__wrapper
+                        p.master__name Андрей
+                        p.master__name.master__name--light черно-белый реализм
                         a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D0%B4%D1%80%D0%B5%D0%B9' target="_blank")
                             button.butt ПОДРОБНЕЕ
                 div.master
                     img.master__photo(src=require("../images/index/master-two.png"))
-                    div.m
-                        p Алиса
-                        p.light цветная татуировка
+                    div.master__wrapper
+                        p.master__name Алиса
+                        p.master__name.master__name--light цветная татуировка
                         a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BB%D0%B8%D1%81%D0%B0' target="_blank")
                             button.butt ПОДРОБНЕЕ
                 div.master
                     img.master__photo(src=require("../images/index/master-three.png"))
-                    div.m
-                        p Антон
-                        p.light Администратор
+                    div.master__wrapper
+                        p.master__name Антон
+                        p.master__name.master__name--light Администратор
                         a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D1%82%D0%BE%D0%BD')
                             button.butt ПОДРОБНЕЕ
         h2 ПОСЛЕДНИЕ РАБОТЫ
         section.last-worck
         h2 КОНТАКТЫ
         section.contact
-            div.left-block
-                div.footer-contact.footer-contact--margin
-                    div.footer-contact__phone
-                        img.footer-img(src=require("../images/layout/footer-phone.svg"))
-                        p.margin +7 (950) 904-34-25
-                    div.footer-contact__map
-                        img.footer-img(src=require("../images/layout/footer-map.svg"))
-                        p.margin Тула, ул.Демидовская #[br] (Заречье), дом 74
-                div.info
+            div.contact__left-block
+                div.wrap
+                    div.map-phone
+                        img.map-phone__svg(src=require("../images/layout/footer-phone.svg"))
+                        p.map-phone__title.map-phone__title--margin +7 (950) 904-34-25
+                    div.map-phone
+                        img.map-phone__svg(src=require("../images/layout/footer-map.svg"))
+                        p.map-phone__title.map-phone__title--margin Тула, ул.Демидовская #[br] (Заречье), дом 74
+                div.working-hours
                     p Время работы :
-                    p
+                    p.inn
                     span.bold Пн-Пт:
                     |10:00 - 20:00
                     p
@@ -71,9 +71,9 @@ block content
                     |выходной
                 div
                     p.bold Мы в социальных сетях :
-            div.right-block
+            div.contact__right-block
                 div.map
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2332.884325286542!2d37.61914501109103!3d54.21753602379962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x413440964d1361c3%3A0x222dfb06b4a302e4!2z0JTQtdC80LjQtNC-0LLRgdC60LDRjyDRg9C7LiwgNzQsINCi0YPQu9CwLCDQotGD0LvRjNGB0LrQsNGPINC-0LHQuy4sIDMwMDA1Nw!5e0!3m2!1sru!2sru!4v1616440420021!5m2!1sru!2sru" width="400" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2332.883084943039!2d37.61873731587154!3d54.217557980170874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x413440964d1361c3%3A0x222dfb06b4a302e4!2z0JTQtdC80LjQtNC-0LLRgdC60LDRjyDRg9C7LiwgNzQsINCi0YPQu9CwLCDQotGD0LvRjNGB0LrQsNGPINC-0LHQuy4sIDMwMDA1Nw!5e0!3m2!1sru!2sru!4v1616870716708!5m2!1sru!2sru" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
 
 
