--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -103,12 +103,26 @@ p{
     border-radius: 50%;
     object-fit: cover;
   }
+
+  p{
+    text-align: center;
+  }
 }
 
-.master p {
-  text-align: center;
+.master__name {
+  color: rgba(19, 19, 21, 0.85);
+  font-weight: 500;
 }
 
+.master__name.master__name--light{
+  font-weight: 500;
+  font-style: italic;
+  color: #6D7077;
+}
+
+.li{
+  text-decoration: none;
+}
 .butt{
   width: 170px;
   height: 40px;
@@ -117,21 +131,13 @@ p{
   border: none;
   border-radius: 15px;
   display: none;
-  cursor: pointer
-}
-.li{
-  text-decoration: none;
-}
-
-.light{
-  font-weight: 500;
-  font-style: italic;
+  cursor: pointer;
+  font-family: 'Lora', serif;
 }
 
 
+//ПОСЛЕДНИЕ РАБОТЫ
 
-
-//последние работы
 .last-worck{
   width: auto;
   height: 100px;
@@ -139,50 +145,58 @@ p{
 }
 
 
-//контакты
-.contact{
+
+//КОНТАКТЫ
+
+.contact__left-block{
+  width: 400px;
+  height: 270px;
+  margin-top: 140px;
+  margin-right: 50%;
+  background-color: #A7BFE8;
+  //background-color: rgba(151, 148, 148, 0.43);
+  position: absolute;
+  z-index: 2;
+}
+.map-phone{
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: flex-start;
 }
+.map-phone__title{
+  color: white;
+}
+
+
+
+
+.working-hours{
+  span {
+    color: #3f5791;
+  }
+  p{
+    color: white;
+  }
+}
+
+.inn{
+  color: white;
+}
+
+
 
 .bold{
   font-weight: bold;
 }
-.left-block{
-  position: absolute;
-  width: 400px;
-  height: 270px;
-  background-color: rgba(151, 148, 148, 0.43);
-  z-index: 2;
-  margin-top: 140px;
-  margin-right: 50%;
-}
 
-.right-block{
+
+
+
+.contact__right-block{
   position: relative;
 }
 .map iframe{
-  width: 1100px;
+  width: 1168px;;
   height: 500px;
   z-index: 1;
 }
-
-.footer-contact.footer-contact--margin{
-  margin-top: 0;
-  margin-bottom: 0;
-
-  p{
-    color: #3f5791;
-  }
-  img{
-    color: #3f5791;
-  }
-}
-.info{
-  p, span {
-    color: #3f5791;
-  }
-}
-
-
