--- a/src/pages/include/layout.pug
+++ b/src/pages/include/layout.pug
@@ -31,7 +31,7 @@ html(lang="en")
                     div.footer-contact__map
                         img.footer-img(src=require("../images/layout/footer-map.svg"))
                         p Тула, ул.Демидовская #[br] (Заречье), дом 74
-                div.footer-social-media
+                //div.footer-social-media
                     a(href='https://www.instagram.com/zabey_tattoostudio/' target="_blank")
                         img.footer-img(src=require("../images/layout/instagram.svg"))
                     a(href='https://vk.com/zabey_tattoostudio' target="_blank")
