--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -38,9 +38,9 @@
 }
 
 .footer-decoration{
-  background: linear-gradient(90deg, #6167E8 0%, #A7BFE8 100%);
+  background: linear-gradient(90deg, #B993D6 0%, #8CA6DB 100%);
   width: auto;
-  height: 100px;
+  height: 50px;
 }
 .footer{
   display: flex;
