--- a/src/pages/include/layout.pug
+++ b/src/pages/include/layout.pug
@@ -12,7 +12,7 @@ html(lang="en")
             nav.menu
                 a(href='/').menu__link ГЛАВНАЯ
                 a(href='#').menu__link ЗАПИСЬ
-                a(href='#').menu__link КОНТАКТЫ
+                a(href='contacts.html').menu__link КОНТАКТЫ
                 a(href='#').menu__link FAQ
 
         block content
