--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,6 +1,7 @@
 @import "scss/vars";
 @import "scss/main";
 @import "scss/index";
+@import "scss/contacts";
 @import "../../node_modules/normalize.css/normalize.css";
 //@import '../../node_modules/owl.carousel/dist/assets/owl.carousel.min.css';
 //@import '../../node_modules/owl.carousel/dist/assets/owl.theme.default.min.css';
