--- a/src/pages/contacts.pug
+++ b/src/pages/contacts.pug
@@ -6,7 +6,7 @@ append sharedVars
     - const pageAdditionClass = 'main-page';
 block content
     section.inner
-        h2.contact__title-page-contact КОНТАКТЫ
+        h2.title-style-other-pages Контакты
         div.contact.contact--display
             div.contact__info
                 div.block-map-phone.align-self
