--- a/src/pages/include/layout.pug
+++ b/src/pages/include/layout.pug
@@ -13,7 +13,7 @@ html(lang="en")
                 a(href='/').menu__link ГЛАВНАЯ
                 a(href='#').menu__link ЗАПИСЬ
                 a(href='contacts.html').menu__link КОНТАКТЫ
-                a(href='#').menu__link FAQ
+                a(href='faq.html').menu__link FAQ
 
         block content
 
