--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -35,6 +35,9 @@ p{
     //background-color: #A7BFE8;
 }
 
+.l-s{
+  text-decoration: none;
+}
 .services__block{
   display: flex;
   flex-direction: column;
