--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -5,13 +5,12 @@ append sharedVars
     - const bodyAdditionClass = '';
     - const pageAdditionClass = 'main-page';
 block content
-
+    div.cub
     //div
         <iframe src="https://vk.com/video_ext.php?oid=-26147985&id=456239034&hash=7038095459f49b02&hd=3" width="1280" height="720" frameborder="0" allowfullscreen autoplay></iframe>
     section.inner
         h2 УСЛУГИ
         section.services
-            //a(href='#')
             div.consultation.services__block
                 p.services__title БЕСПЛАТНАЯ КОНСУЛЬТАЦИЯ
                 a(href='faq.html').l-s
@@ -37,7 +36,7 @@ block content
                     div.master__wrapper
                         p.master__name Ксения
                         p.master__name.master__name--light черно-белый реализм
-                        a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D0%B4%D1%80%D0%B5%D0%B9' target="_blank")
+                        a.li(href='master.html')
                             button.butt ПОДРОБНЕЕ
                 div.master
                     img.master__photo(src=require("../images/index/ks-os.jpg"))
