--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,6 +3,8 @@
 @import "scss/index";
 @import "scss/contacts";
 @import "scss/faq";
+@import "scss/recording";
+@import "scss/masters";
 @import "../../node_modules/normalize.css/normalize.css";
 //@import '../../node_modules/owl.carousel/dist/assets/owl.carousel.min.css';
 //@import '../../node_modules/owl.carousel/dist/assets/owl.theme.default.min.css';
