--- a/src/pages/include/layout.pug
+++ b/src/pages/include/layout.pug
@@ -19,6 +19,7 @@ html(lang="en")
 
         div.footer-decoration
             footer.footer.inner
+                //a(href="#", target="_blank").vers verslibre
                 //div.footer-menu
                     a(href='#').footer-menu__link ГЛАВНАЯ
                     a(href='#').footer-menu__link ЗАПИСЬ
