--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -43,14 +43,14 @@ block content
                     div.master__wrapper
                         p.master__name Ксения
                         p.master__name.master__name--light цветная татуировка
-                        a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BB%D0%B8%D1%81%D0%B0' target="_blank")
+                        a.li(href='masterKO.html')
                             button.butt ПОДРОБНЕЕ
                 div.master
                     img.master__photo(src=require("../images/index/maria.jpg"))
                     div.master__wrapper
                         p.master__name Мария
                         p.master__name.master__name--light администратор
-                        a.li(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D1%82%D0%BE%D0%BD')
+                        a.li(href='masterMK.html')
                             button.butt ПОДРОБНЕЕ
         h2 ПОСЛЕДНИЕ РАБОТЫ
         section.last-worck
